[gd_scene load_steps=7 format=2]

[ext_resource path="res://Misc/BigStar.gd" type="Script" id=1]
[ext_resource path="res://Misc/gfx/Star0.png" type="Texture" id=2]
[ext_resource path="res://Misc/gfx/Star1.png" type="Texture" id=3]
[ext_resource path="res://Misc/gfx/starAppear0.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 7.5
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": false,
"name": "appear",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[node name="BigStar" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 65
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="BigStarSprite" type="AnimatedSprite" parent="Area2D"]
z_index = 1
z_as_relative = false
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Hitbox" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 1.4, 1.6 )
shape = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
scale = Vector2( 1.2, 1.3 )
shape = SubResource( 2 )
disabled = true

[node name="DisabledCollisionTime" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5

[node name="RespawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 12.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DisabledCollisionTime" to="." method="_on_DisabledCollisionTime_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
